UF-7125: Moved CaseType enum to API-layer